--- a/app/data/default_config.json
+++ b/app/data/default_config.json
@@ -6,5 +6,8 @@
         "noteheadFullSmall": 0,
         "noteheadHalfSmall": 1
     },
-    "class_output_names": ["noteheadFull", "noteheadHalf"]
+    "class_output_names": ["noteheadFull", "noteheadHalf"],
+
+    "window_size": [640,640],
+    "overlap_ratio": 0.25
 }
