Update eval script, fix multiple bugs

--- a/app/data/default_config.json
+++ b/app/data/default_config.json
@@ -1,13 +1,118 @@
 {
-    "class_id_reference_table":
-    {
-        "noteheadFull": 0,
-        "noteheadHalf": 1,
-        "noteheadFullSmall": 0,
-        "noteheadHalfSmall": 1
-    },
-    "class_output_names": ["noteheadFull", "noteheadHalf"],
+    "class_id_reference_table": {
+        "accidentalFlat": 0,
+        "accidentalNatural": 1,
+        "accidentalSharp": 2,
+        "articulationAccent": 3,
+        "augmentationDot": 4,
+        "barline": 5,
+        "barlineHeavy": 6,
+        "beam": 7,
+        "cClef": 8,
+        "dynamicCrescendoHairpin": 9,
+        "dynamicDiminuendoHairpin": 10,
+        "fClef": 11,
+        "fermataAbove": 12,
+        "figuredBassText": 13,
+        "flag16thDown": 14,
+        "gClef": 15,
+        "horizontalSpanner": 16,
+        "keySignature": 17,
+        "legerLine": 18,
+        "lyricsText": 19,
+        "measureSeparator": 20,
+        "multiMeasureRest": 21,
 
-    "window_size": [640,640],
+        "noteheadFull": 22,
+        "noteheadFullSmall": 22,
+
+        "noteheadHalf": 23,
+        "noteheadHalfSmall": 23,
+
+        "ornament": 24,
+        "otherText": 25,
+        "repeat": 26,
+        "repeatDot": 27,
+        "repeatOneBar": 28,
+        "rest16th": 29,
+        "rest32nd": 30,
+        "rest8th": 31,
+        "restHalf": 32,
+        "restQuarter": 33,
+        "restWhole": 34,
+        "rest_breve": 35,
+        "rest_longa": 36,
+        "slur": 37,
+        "staff": 38,
+        "staffGrouping": 39,
+        "staffLine": 40,
+        "stem": 41,
+        "systemSeparator": 42,
+        "tie": 43,
+        "timeSigCommon": 44,
+        "timeSignature": 45,
+        "tremoloMark": 46,
+        "tuple": 47,
+        "tupleBracket": 48,
+        "unclassified": 49,
+        "volta": 50
+    },
+    "class_output_names": [
+        "accidentalFlat",
+        "accidentalNatural",
+        "accidentalSharp",
+        "articulationAccent",
+        "augmentationDot",
+        "barline",
+        "barlineHeavy",
+        "beam",
+        "cClef",
+        "dynamicCrescendoHairpin",
+        "dynamicDiminuendoHairpin",
+        "fClef",
+        "fermataAbove",
+        "figuredBassText",
+        "flag16thDown",
+        "gClef",
+        "horizontalSpanner",
+        "keySignature",
+        "legerLine",
+        "lyricsText",
+        "measureSeparator",
+        "multiMeasureRest",
+        "noteheadFull",
+        "noteheadHalf",
+        "ornament",
+        "otherText",
+        "repeat",
+        "repeatDot",
+        "repeatOneBar",
+        "rest16th",
+        "rest32nd",
+        "rest8th",
+        "restHalf",
+        "restQuarter",
+        "restWhole",
+        "rest_breve",
+        "rest_longa",
+        "slur",
+        "staff",
+        "staffGrouping",
+        "staffLine",
+        "stem",
+        "systemSeparator",
+        "tie",
+        "timeSigCommon",
+        "timeSignature",
+        "tremoloMark",
+        "tuple",
+        "tupleBracket",
+        "unclassified",
+        "volta"
+    ],
+    "window_size": [
+        640,
+        640
+    ],
     "overlap_ratio": 0.25
 }
