--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-matplotlib==3.9.2
+matplotlib==3.9.3
 mung==1.2.1
-numpy==2.1.3
+numpy==2.2.0
+opencv_python==4.10.0.84
 Pillow==11.0.0
+prettytable==3.12.0
 PyYAML==6.0.2
 PyYAML==6.0.2
 seaborn==0.13.2
