--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-matplotlib==3.9.3
+matplotlib~=3.9.2
 mung==1.2.1
-numpy==2.2.0
+numpy~=2.1.3
 opencv_python==4.10.0.84
 Pillow==11.0.0
 prettytable==3.12.0
 PyYAML==6.0.2
-PyYAML==6.0.2
 seaborn==0.13.2
-tqdm==4.66.1
+tqdm==4.67.1
 ultralytics==8.3.28
+requests==2.32.3
+packaging==24.2
