--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ packaging==24.2
 Pillow==11.1.0
 prettytable==3.14.0
 PyYAML==6.0.2
-Requests==2.32.3
+requests==2.32.3
 seaborn==0.13.2
+smashcima==0.2.0
 tqdm==4.66.1
 ultralytics==8.3.28
-requests==2.32.3
